--- a/src/pages/search.module.css
+++ b/src/pages/search.module.css
@@ -213,6 +213,10 @@
   color: #fff;
 }
 
+[data-theme='dark'] .indexCard:hover {
+  color: #000;
+}
+
 .indexCardTitle {
   font-weight: 700;
   font-size: 0.9375rem;
